deploy/k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: exinity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: your-dockerhub-user/api:latest
          ports:
            - containerPort: 8080
