deploy/k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-exinity-task
  namespace: exinity-task
spec:
  type: NodePort
  selector:
    app: go-exinity-task
  ports:
    - name: grpc
      port: 50051       # This is the internal port the service will use
      targetPort: 50051  # This is the port your API is listening on inside the container
      nodePort: 30051    # This is the external port on Minikube that will be exposed to your local machine
