deploy/k8s/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exinity-task-ingress
  namespace: exinity-task
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-exinity-task
            port:
              number: 50051
